@@ -1,12 +1,12 @@
 package com.projectmg.Services;
 
+import com.projectmg.Configuration.UsuarioAuditoria;
 import com.projectmg.Dtos.ReferenciaDTO;
 import com.projectmg.Enum.TipoAcao;
+import com.projectmg.Exceptions.BusinessException;
 import com.projectmg.Models.Referencia;
 import com.projectmg.Repositories.ReferenciaRepository;
-import com.projectmg.Configuration.UsuarioAuditoria;
 import com.projectmg.Specs.ReferenciaSpec;
-import com.projectmg.Exceptions.BusinessException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -16,7 +16,8 @@ import java.util.stream.Collectors;
 
 @Service
 public class ReferenciaService {
-    private static final String MSG_REFERENCIA = "Referencia não encontrado";
+
+    private static final String MSG_REFERENCIA = "Referência não encontrada";
 
     @Autowired
     private ReferenciaRepository referenciaRepository;
@@ -24,7 +25,13 @@ public class ReferenciaService {
     @Autowired
     private ReferenciaSpec referenciaSpec;
 
-    public ReferenciaDTO converterReferenciaParaReferenciaDTO(Referencia referencia) {
+    /* =========================
+       CONVERSORES
+       ========================= */
+
+    public ReferenciaDTO converterReferenciaParaReferenciaDTO(
+            Referencia referencia
+    ) {
         return new ReferenciaDTO(
                 referencia.getId(),
                 referencia.getNome(),
@@ -32,104 +39,166 @@ public class ReferenciaService {
                 referencia.getRendimento(),
                 referencia.getDataAtualizacao(),
                 referencia.getUsuarioUltimaAlteracao(),
-                referencia.getAcao()
+                referencia.getAcao(),
+                referencia.getAtivo()
         );
     }
 
-    public Referencia converterReferenciaDTOParaReferencia(ReferenciaDTO referenciaDTO) {
+    public Referencia converterReferenciaDTOParaReferencia(
+            ReferenciaDTO dto
+    ) {
         Referencia referencia = new Referencia();
-        referencia.setId(referenciaDTO.id());
-        referencia.setNome(referenciaDTO.nome());
-        referencia.setReferencia(referenciaDTO.referencia());
-        referencia.setRendimento(referenciaDTO.rendimento());
-        referencia.setDataAtualizacao(referenciaDTO.dataAtualizacao());
-        referencia.setUsuarioUltimaAlteracao(referenciaDTO.usuarioUltimaAlteracao());
-        referencia.setAcao(referenciaDTO.acao());
+        referencia.setId(dto.id());
+        referencia.setNome(dto.nome());
+        referencia.setReferencia(dto.referencia());
+        referencia.setRendimento(dto.rendimento());
+        referencia.setDataAtualizacao(dto.dataAtualizacao());
+        referencia.setUsuarioUltimaAlteracao(dto.usuarioUltimaAlteracao());
+        referencia.setAcao(dto.acao());
+        referencia.setAtivo(dto.ativo());
         return referencia;
     }
 
-    public ReferenciaDTO cadastrarReferencia(ReferenciaDTO referenciaDTO) {
-        referenciaSpec.verifyReferenciaNome(referenciaDTO.nome());
-        referenciaSpec.verifyReferenciaRef(referenciaDTO.referencia());
+    /* =========================
+       CRUD
+       ========================= */
 
-        List<Referencia> referenciaNome = referenciaRepository.findByNome(referenciaDTO.nome());
-        List<Referencia> referenciaRef = referenciaRepository.findByReferencia(referenciaDTO.referencia());
+    public ReferenciaDTO cadastrarReferencia(ReferenciaDTO dto) {
 
-        referenciaSpec.verifyReferenciaNomeExists(referenciaNome);
-        referenciaSpec.verifyReferenciaRefExists(referenciaRef);
+        referenciaSpec.verifyReferenciaNome(dto.nome());
+        referenciaSpec.verifyReferenciaRef(dto.referencia());
 
-        Referencia referencia = converterReferenciaDTOParaReferencia(referenciaDTO);
-        referencia.setAcao(referencia.getId() == null ? TipoAcao.CRIADO : TipoAcao.ATUALIZADO);
+        referenciaSpec.verifyReferenciaNomeExists(
+                referenciaRepository.findByNome(dto.nome())
+        );
+
+        referenciaSpec.verifyReferenciaRefExists(
+                referenciaRepository.findByReferencia(dto.referencia())
+        );
+
+        Referencia referencia = converterReferenciaDTOParaReferencia(dto);
+
+        referencia.setAtivo(true);
+        referencia.setAcao(TipoAcao.CRIADO);
+        referencia.setDataAtualizacao(LocalDate.now());
+        referencia.setUsuarioUltimaAlteracao(
+                UsuarioAuditoria.getUsuarioLogado()
+        );
+
         referencia = referenciaRepository.save(referencia);
-
         return converterReferenciaParaReferenciaDTO(referencia);
     }
 
-    public ReferenciaDTO atualizarReferencia(ReferenciaDTO referenciaDTO) {
-        referenciaSpec.verifyReferenciaId(referenciaDTO.id());
+    public ReferenciaDTO atualizarReferencia(ReferenciaDTO dto) {
 
-        Referencia referenciaExistente = referenciaRepository.findById(referenciaDTO.id())
+        referenciaSpec.verifyReferenciaId(dto.id());
+
+        Referencia referencia = referenciaRepository
+                .findById(dto.id())
                 .orElseThrow(() -> new BusinessException(MSG_REFERENCIA));
 
-        referenciaSpec.verifyReferenciaNome(referenciaDTO.nome());
-        referenciaSpec.verifyReferenciaRef(referenciaDTO.referencia());
-        referenciaSpec.verifyReferenciaNomeDup(referenciaDTO.nome(), referenciaDTO.id());
-        referenciaSpec.verifyReferenciaRefDup(referenciaDTO.referencia(), referenciaDTO.id());
+        referenciaSpec.verifyReferenciaNome(dto.nome());
+        referenciaSpec.verifyReferenciaRef(dto.referencia());
+        referenciaSpec.verifyReferenciaNomeDup(dto.nome(), dto.id());
+        referenciaSpec.verifyReferenciaRefDup(dto.referencia(), dto.id());
 
-        referenciaExistente.setNome(referenciaDTO.nome());
-        referenciaExistente.setReferencia(referenciaDTO.referencia());
-        referenciaExistente.setDataAtualizacao(LocalDate.now());
-        referenciaExistente.setUsuarioUltimaAlteracao(UsuarioAuditoria.getUsuarioLogado());
-        referenciaExistente.setAcao(TipoAcao.ATUALIZADO);
+        referencia.setNome(dto.nome());
+        referencia.setReferencia(dto.referencia());
+        referencia.setRendimento(dto.rendimento());
+        referencia.setDataAtualizacao(LocalDate.now());
+        referencia.setUsuarioUltimaAlteracao(
+                UsuarioAuditoria.getUsuarioLogado()
+        );
+        referencia.setAcao(TipoAcao.ATUALIZADO);
 
-        referenciaRepository.save(referenciaExistente);
-        return converterReferenciaParaReferenciaDTO(referenciaExistente);
+        referenciaRepository.save(referencia);
+        return converterReferenciaParaReferenciaDTO(referencia);
     }
 
+    /**
+     * ❌ Exclusão lógica
+     */
     public void deletarReferencia(Long id) {
-        Referencia referencia = referenciaRepository.findById(id).orElseThrow();
+        Referencia referencia = referenciaRepository
+                .findById(id)
+                .orElseThrow(() -> new BusinessException(MSG_REFERENCIA));
+
+        referencia.setAtivo(false);
         referencia.setAcao(TipoAcao.DELETADO);
         referencia.setDataAtualizacao(LocalDate.now());
-        referencia.setUsuarioUltimaAlteracao(UsuarioAuditoria.getUsuarioLogado());
+        referencia.setUsuarioUltimaAlteracao(
+                UsuarioAuditoria.getUsuarioLogado()
+        );
+
         referenciaRepository.save(referencia);
-        referenciaRepository.deleteById(id);
     }
 
-    public ReferenciaDTO buscarReferenciaPorId(Long id) {
-        Referencia referencia = referenciaRepository.findById(id)
+    /**
+     * ♻ Reativação
+     */
+    public void reativarReferencia(Long id) {
+        Referencia referencia = referenciaRepository
+                .findById(id)
                 .orElseThrow(() -> new BusinessException(MSG_REFERENCIA));
-        return converterReferenciaParaReferenciaDTO(referencia);
+
+        referencia.setAtivo(true);
+        referencia.setAcao(TipoAcao.ATUALIZADO);
+        referencia.setDataAtualizacao(LocalDate.now());
+        referencia.setUsuarioUltimaAlteracao(
+                UsuarioAuditoria.getUsuarioLogado()
+        );
+
+        referenciaRepository.save(referencia);
+    }
+
+    /* =========================
+       CONSULTAS
+       ========================= */
+
+    public ReferenciaDTO buscarReferenciaPorId(Long id) {
+        return referenciaRepository.findById(id)
+                .map(this::converterReferenciaParaReferenciaDTO)
+                .orElseThrow(() -> new BusinessException(MSG_REFERENCIA));
     }
 
     public List<ReferenciaDTO> buscarReferenciaPorNome(String nome) {
-        List<Referencia> referencias = referenciaRepository.findByNome(nome);
-        referenciaSpec.verifyReferencia(referencias);
-        return referencias.stream()
+        List<Referencia> refs = referenciaRepository.findByNome(nome);
+        referenciaSpec.verifyReferencia(refs);
+        return refs.stream()
                 .map(this::converterReferenciaParaReferenciaDTO)
                 .collect(Collectors.toList());
     }
 
     public List<ReferenciaDTO> buscarReferenciaPorReferencia(String referencia) {
-        List<Referencia> referencias = referenciaRepository.findByReferencia(referencia);
-        referenciaSpec.verifyReferencia(referencias);
-        return referencias.stream()
+        List<Referencia> refs =
+                referenciaRepository.findByReferencia(referencia);
+        referenciaSpec.verifyReferencia(refs);
+        return refs.stream()
                 .map(this::converterReferenciaParaReferenciaDTO)
                 .collect(Collectors.toList());
     }
 
-    public List<ReferenciaDTO> buscarReferenciaTodos() {
-        List<Referencia> referencias = referenciaRepository.findAllAtivos();
-        referenciaSpec.verifyReferencia(referencias);
+    /**
+     * 🔍 Ativos ou todos
+     */
+    public List<ReferenciaDTO> buscarReferencias(boolean somenteAtivos) {
+        List<Referencia> referencias = somenteAtivos
+                ? referenciaRepository.findByAtivoTrue()
+                : referenciaRepository.findAll();
+
         return referencias.stream()
                 .map(this::converterReferenciaParaReferenciaDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * 🕒 Últimas alterações (ativos + inativos)
+     */
     public List<ReferenciaDTO> buscarUltimosAtualizados() {
-        List<Referencia> referencias = referenciaRepository.findTop5ByOrderByDataAtualizacaoDesc();
-        return referencias.stream()
+        return referenciaRepository
+                .findTop5ByOrderByDataAtualizacaoDesc()
+                .stream()
                 .map(this::converterReferenciaParaReferenciaDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
 }
